--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "typescript-course",
+  "name": "teste",
   "version": "1.0.0",
-  "description": "```typescript  npm i typescript -D //dev dependence",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"tsx"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
+    "@types/node": "^22.10.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
