--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "code-runner.executorMap": {
     "typescript": "tsx"
   },
-  "code-runner.runInTerminal": true
+  "code-runner.runInTerminal": true,
 }
