--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["ES2023"],
+    "lib": ["ES2023","DOM"],
     "module": "node16",
     "target": "ES2023"
   }
