--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "tsx",
     "lint": "eslint 'src/**/*.{ts,tsx}'"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,5 +18,9 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2"
+  },
+  "dependencies": {
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
